# swaptun_backend

./: .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  DATETIME_TIMEZONE_MIGRATION.md  Dockerfile  FRONTEND_API_CHANGES.md  FRONTEND_API_PLAYLISTS_MUSICS.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_NOTIFICATION_IMPLEMENTATION.md  README.md  SHARED_PLAYLIST_FRONTEND_DOC.md  container-compose.yaml  mail_service_plan.md
.claude/: settings.local.json
.github/workflows/: main.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/api/: apple.rs  auth.rs  deezer.rs  mod.rs  musicbrainz.rs  notification.rs  playlist.rs  spotify.rs  user_info.rs  users.rs  youtube.rs
api/src/config/: app_config.rs  mod.rs
api/tests/: api_test.rs  apple_api_test.rs  auth_api_test.rs  notification_api_test.rs  playlist_api_test.rs  spotify_api_test.rs  users_api_test.rs  youtube_api_test.rs
migrations/: Cargo.toml
migrations/src/: deezer_token_29_04_2025.rs  fcm_token_03_08_2025.rs  lib.rs  m20250319_093000_create_tbl_users.rs  m20250618_create_user_info_table.rs  m20250816_000000_create_friendships_table.rs  m20250816_000001_create_shared_playlist_table.rs  m20250910_000000_create_apple_token_table.rs  m2025_03_19_create_tbl_users.rs  m2025_04_29_add_playlist_origin_id.rs  m2025_04_29_create_deezer_token_table.rs  m2025_04_29_create_playlist_origin_enum.rs  m2025_04_29_create_playlist_table.rs  m2025_04_29_create_spotify_code_table.rs  m2025_04_29_create_spotify_token_table.rs  m2025_06_18_create_user_info_table.rs  m2025_06_28_create_youtube_token_table.rs  m2025_08_03_create_fcm_token_table.rs  m2025_08_14_enable_fuzzy_search.rs  m2025_08_16_create_friendships_table.rs  m2025_08_16_create_shared_playlist_table.rs  m2025_09_10_create_apple_token_table.rs  m2025_10_05_add_shared_by_to_shared_playlist.rs  m2025_10_05_remove_unique_constraint_friendships.rs  m2025_10_18_add_image_url_to_playlist.rs  music29_04_2025.rs  music_playlist.rs  playlist29_04_2025.rs  playlist_origin_29_04_2025.Rs  playlist_origin_29_04_2025.rs  spotify_code_29_04_2025.rs  spotify_token_29_04_2025.rs  youtube_token_28_06_2025.rs
models/: Cargo.toml
models/src/: apple_token.rs  deezer_token.rs  fcm_token.rs  friendship.rs  lib.rs  music.rs  music_playlist.rs  playlist.rs  shared_playlist.rs  spotify_code.rs  spotify_token.rs  user.rs  user_info.rs  youtube_token.rs
repositories/: Cargo.toml
repositories/src/: apple_token_repository.rs  deezer_token_repository.rs  fcm_token_repository.rs  friendship_repository.rs  lib.rs  music_playlist_repository.rs  music_repository.rs  playlist_repository.rs  spotify_code_repository.rs  spotify_token_repository.rs  token_repository.rs  user_info_repository.rs  user_repository.rs  youtube_token_repository.rs
services/: Cargo.toml
services/certs/: AuthKey_apple_music.p8
services/src/: lib.rs
services/src/apple/: apple.rs  mod.rs
services/src/apple/dto/: apple.rs  mod.rs
services/src/auth/: jwt.rs  mod.rs  password.rs  roles.rs
services/src/deezer/: deezer.rs  mod.rs
services/src/dto/: mod.rs  music_request.rs  notification_request.rs  playlist_request.rs  spotify.rs  token_request.rs  user_request.rs
services/src/error/: app_error.rs  mod.rs
services/src/mail/: mail_service.rs  mod.rs
services/src/mail/dto/: mail_request.rs  mail_response.rs  mod.rs
services/src/mail/templates/: password_reset.html
services/src/music/: mod.rs  music_service.rs
services/src/music/dto/: mod.rs  music_request.rs
services/src/musicbrainz/: mod.rs  musicbrainz.rs
services/src/notification/: mod.rs  notification.rs
services/src/notification/dto/: mod.rs  notification_request.rs
services/src/playlist/: mod.rs  playlist_service.rs
services/src/playlist/dto/: mod.rs  playlist_request.rs
services/src/spotify/: mod.rs  spotify.rs
services/src/spotify/dto/: mod.rs
services/src/test/: mod.rs  test_database.rs
services/src/token/: token_service.rs
services/src/user/: mod.rs  model.rs  user_service.rs
services/src/user/dto/: forgot_password_request.rs  friendship_request.rs  mod.rs  user_request.rs
services/src/user_info/: mod.rs  model.rs  service.rs
services/src/validators/: mod.rs  user_validators.rs
services/src/yt_music/: mod.rs  yt_music.rs
services/src/yt_music/dto/: mod.rs  youtube.rs
services/tests/: apple.rs  deezer.rs  forgot_password_test.rs  friendship_test.rs  mail_service.rs  mod.rs  music.rs  musicbrainz.rs  playlist.rs  playlist_test.rs  shared_playlist_test.rs  spotify.rs  test_database.rs  user_exclude_self_tests.rs  user_info.rs  user_service.rs  yt_music.rs
services/tests/common/: mod.rs
src/: lib.rs  main.rs
src/api/: auth.rs  mod.rs  users.rs
src/auth/: jwt.rs
src/db/: mod.rs
src/db/migrations/: m20250319_093000_create_tbl_users.rs  mod.rs
src/db/models/: mod.rs  user.rs
src/db/repositories/: user_repository.rs
src/validators/: user_validators.rs
