[package]
name = "swaptun-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["." , "api", "services","repositories"]
[features]
default = ["full"]

full= ["swaptun-api/full"]

[dependencies]
swaptun-api = { path = "./api", default-features = false }
rspotify = { version = "0.14.0",    default-features = false,    features = ["client-reqwest", "reqwest-rustls-tls", "cli"] }