[package]
name = "swaptun-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-service = "2.0.3"
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.27"
rand_core = { version = "0.9.3", features = ["std"] }

sea-orm = { version = "1.1.10", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "runtime-actix-rustls",
  "runtime-async-std-rustls",
  "macros",

] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls","json"] }
swaptun-models = { path = "../models" }
swaptun-migrations = { path = "../migrations" }
swaptun-services = {path = "../services"}