[package]
name = "swaptun-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]  # Aucun feaure activé par défaut


# Active toute l’application complète
full = [
  "actix-web",
  "actix-web-httpauth",
  "actix-service",
  "argon2",
  "async-trait",
  "dotenv",
  "env_logger",
  "log",
  "rand_core",
  "sea-orm",
  "serde",
  "serde_json",
  "tokio",
  "validator",
  "swaptun-migrations",
  "chrono",
  "swaptun-services/default",
  "actix-http"
]

[dependencies]
# Chaque dépendance activée uniquement via une feature
actix-service = { version = "2.0.3", optional = true }
actix-web = { version = "4.10.2", optional = true }
actix-web-httpauth = { version = "0.8.2", optional = true }
argon2 = { version = "0.5.3", optional = true }
async-trait = { version = "0.1.88", optional = true }
dotenv = { version = "0.15.0", optional = true }
env_logger = { version = "0.11.7", optional = true }
log = { version = "0.4.27", optional = true }
rand_core = { version = "0.9.3", features = ["std"], optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
validator = { version = "0.20.0", features = ["derive"], optional = true }
chrono = { version = "0.4.40", features = ["serde"], optional = true }
actix-http = { version = "3", optional = true }

tokio = { version = "1.44.1", features = ["full"], optional = true }

sea-orm = { version = "1.1.10", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "runtime-actix-rustls",
  "runtime-async-std-rustls",
  "macros",
], optional = true }

swaptun-migrations = { path = "../migrations", optional = true }
swaptun-services = { path = "../services", default-features = false }
