[package]
name = "swaptun-models"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-service = "2.0.3"
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
once_cell = "1.21.1"
password-hash = "0.5.0"
rand_core = { version = "0.9.3", features = ["std"] }
regex = "1.11.1"
sea-orm = { version = "1.1.7", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",

] }
sea-orm-migration = "1.1.7"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }