[package]
name = "swaptun-repositories"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = { version = "0.4.40", features = ["serde"] }
sea-orm = { version = "1.1.10", features = [
  "sqlx-postgres",
   "runtime-tokio-rustls",
  "runtime-actix-rustls",
  "runtime-async-std-rustls",
  "macros",
] }
swaptun-models = { path = "../models" }
log = { version = "0.4.27" }