[package]
name = "swaptun-services"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
sea-orm = { version = "1.1.10", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "runtime-actix-rustls",
  "runtime-async-std-rustls",
  "macros",
] }
tokio = { version = "1.44.1", features = ["full"] }
swaptun-repositories = { path = "../repositories" }
swaptun-models = { path = "../models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
once_cell = "1.21.1"
password-hash = "0.5.0"
regex = "1.11.1"
testcontainers-modules ={version = "0.11.6" ,features =["blocking","postgres"]}
swaptun-migrations = { path = "../migrations" }
lazy_static = "1.5.0"
[features]
mock = ["sea-orm/mock","sea-orm/sqlx-sqlite"]


