[package]
name = "swaptun-services"
version = "0.1.0"
edition = "2021"
[features]
default=["full"]

# Feature complète pour usage normal
full = [
  "tokio",
  "argon2",
  "futures",
  "jsonwebtoken",
  "password-hash",
  "testcontainers-modules",
  "lazy_static",
  "swaptun-migrations",
  "swaptun-repositories",
  "chrono",
  "actix-web",
  "ytmapi-rs",
  "oauth2"
]



[dependencies]
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.140" }
validator = { version = "0.20.0", features = ["derive"] }
sea-orm = { version = "1.1.10",  features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "runtime-actix-rustls",
  "runtime-async-std-rustls",
  "macros",
] }
actix-web = { version = "4.10.2",optional = true}
chrono = { version = "0.4.40", features = ["serde"], optional = true }
tokio = { version = "1.44.1", features = ["full"], optional = true }
argon2 = { version = "0.5.3", optional = true }
futures = { version = "0.3.31", optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
log = { version = "0.4.27" }
once_cell = { version = "1.21.1" }
password-hash = { version = "0.5.0", optional = true }
regex = { version = "1.11.1" }
testcontainers-modules = { version = "0.11.6", features = ["blocking", "postgres"], optional = true }
swaptun-migrations = { path = "../migrations", optional = true }
swaptun-repositories = { path = "../repositories", optional = true }
swaptun-models = { path = "../models" }
lazy_static = { version = "1.5.0", optional = true }
rspotify = { version = "0.14.0",    default-features = false,    features = ["client-reqwest", "reqwest-rustls-tls", "cli","env-file"] }
fcm = {version="0.9.2", feature=["rustls"], default-features = false}
reqwest = { version = "0.11", features = ["json"] }
oauth2 =  {version = "5.0.0", optional= true }
ytmapi-rs =  {git ="https://github.com/saurL/youtui.git", branch ="public-token", default-features = false,features= ["rustls-tls", "simplified-queries"],optional= true }

